# sobar_pdf

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.ps1  build.sh
.github/workflows/: android.yaml  ios.yaml  linux.yaml  mac.yaml  main.yaml  windows.yaml
build_pdfium/: CMakeLists.txt
build_pdfium/scripts/: build.sh  depot_init.bat
include/: sobar.h
scripts/: build_pdfium.ps1  build_pdfium.sh  common.cmake  find_vs.ps1  git_info.ps1  git_info.sh
src/: CMakeLists.txt  sobar.cpp  sobar.def  version.rc.in
